updated css for the overlap issues

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -6,6 +6,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-repeat: no-repeat;
   box-sizing: border-box;
   padding: 0 20px;
 
@@ -20,7 +21,7 @@ header {
 
 #api_status {
   margin-left: auto;
-  position: fixed;
+  position: absolute;
   top: 15px;
   right: 30px;
   width: 40px;
