--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -28,9 +28,12 @@
 }
 
 .places > article > h2 {
-    font-size: 30px;
-    margin: 0 0 0 0;
-    align-self: center;
+	align-self: start;
+	font-size: 30px;
+	text-align: left;
+	padding: 0;
+	margin: 0;
+	overflow-x: hidden;
 }
 
 .price_by_night {
@@ -44,7 +47,7 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
-    position: absolute;
+    position: relative;
     top: 10px;
     right: 20px;
 }
